Agregando librerpia firebase para la autenticación | Creando registro por correo y contraseña y logueo por firebase en MainActivity | Cerrar seición en WelcomeActivity y captura de datos del usuario firebase

--- a/Firebase/app/src/main/res/values/strings.xml
+++ b/Firebase/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Firebase</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="create_account_button">Create Account</string>
+    <string name="sign_in">Sign In</string>
+    <string name="welcome">Welcome Danicode</string>
+    <string name="button_sign_out">Sign Out</string>
 </resources>
